--- a/quize/lotto_basic.html
+++ b/quize/lotto_basic.html
@@ -122,6 +122,7 @@
             //만약에 랜덤수를 구할때 이미 이전에 나온수와 같다면, 다시 랜덤수를 구해라.
             // lottoNum 
             for(let i =0; i < 5; i++){ 
+                if(lottoNum )
                 // lottoNum.push(Math.ceil(Math.random() * 36))
                 lottoNum.push( Math.floor( (Math.random() * 36) + 1)); 
                 console.log(lottoNum)
@@ -135,10 +136,7 @@
         2. 포문 안에서 조건식이용하기 , PUSH를 하기전에, 체크해서, 이전에 나온수와 중복되는 수가 있다면, 다시 랜덤수구하고, 없다면 푸쉬진행.
         */
 
-        /* 
-        1. 로또번호 더블체크 
-        2. 리팩토링 -> 모듈화시키
-        */
+    
 
         function checkDouble(arr) {
             let set = new Set(arr);
